# tech-challenge-1

./: .gitignore  2025-10-23-there-is-2-dbs-in-this-project-i-think-this-might.txt  CLAUDE.md  LICENSE  README.md  Tech_Challenge_API.postman_collection.json  app.py  conf.py  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml  test-coverage.yml
data/: scraped_books.csv
migrations/: env.py
migrations/versions/: 0671e50f7a9a_add_scraping_jobs_table.py  2a93660ae428_criando_book_table.py  6995c20bc64c_add_auth_fields_to_user_model.py  7f554eb63db3_criando_book_table.py  b75f99e2b181_create_tables.py  bf00a3ee7a1b_criando_user_table.py  e8e8c2349939_criando_user_table.py
models/: book.py
routes/: __init__.py  book_routes.py  user_routes.py
src/: app.py  conf.py  config.py  extensions.py  main.py
src/api/routes/: book.py  scraping.py  user.py
src/api/schemas/: auth.py  book.py  user.py
src/models/: __init__.py  book.py  scraping_job.py  user.py
src/routes/: __init__.py  book_routes.py  category_routes.py  health_routes.py  ml_routes.py  scraping_routes.py  stats_routes.py  user_routes.py
src/services/auth/: dependencies.py  jwt.py  password.py
src/services/scraping/: __init__.py  core.py  file_handler.py
src/utils/: serializers.py
tests/: conftest.py  factories.py  test_api.py  test_app.py  test_auth_endpoints.py  test_auth_jwt.py  test_auth_password.py  test_auth_protected_endpoints.py  test_conf.py  test_extensions.py  test_models.py  test_routes_init.py  test_schemas.py  test_scraping_routes.py
tests/books/: book_tests.py  conftest.py  test_book_by_id.py  test_book_search.py  test_list_books.py
tests/categories/: conftest.py  test_categories.py
tests/health/: test_health.py
