[project]
name = "tech-challenge-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Allan Vital",email = "allan.vital@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
    "fastapi (>=0.110.0,<1.0.0)",
    "uvicorn (>=0.29.0,<1.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pynvim (>=0.6.0,<0.7.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
factory-boy = "^3.3.3"
pytest-cov = "^7.0.0"
python-dotenv = "^1.1.1"

