[project]
name = "tech_challenge_1"
version = "0.1.0"
description = ""
authors = [
    {name = "Allan Vital",email = "allan.vital@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
    "fastapi (>=0.110.0,<1.0.0)",
    "uvicorn (>=0.29.0,<1.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pynvim (>=0.6.0,<0.7.0)",
    "uv>=0.9.4,<1.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "factory-boy>=3.3.3",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.1.1",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
no_implicit_optional = false
check_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

